Paths have to change in default and grub.cfg for this to work.

--- a/grub.cfg
+++ b/grub.cfg
@@ -12,6 +12,6 @@ set timeout=5
 
 menuentry "Ubuntu Desktop 22.04" {
 set gfxpayload=keep
-linux /boot/casper/vmlinuz ip=dhcp nfsroot=172.26.0.30:/var/www/html/xubuntu/desktop/jammy/ netboot=nfs ip=dhcp boot=casper systemd.mask=tmp.mount --
-initrd /boot/casper/initrd
+linux xubuntu/desktop/jammy/vmlinuz ip=dhcp nfsroot=172.26.0.30:/var/www/html/xubuntu/desktop/jammy/ netboot=nfs ip=dhcp boot=casper systemd.mask=tmp.mount --
+initrd xubuntu/desktop/jammy/initrd
 }}
